[metadata]
name = kea-dhcp-db
summary = Python library for Kea DHCP database backend
description_file =
    README.rst
author = TODO
author_email = todo@example.org
home_page = https://todo.example.org/
python_requires = >=3.8
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    kea_dhcp_db
